--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "DB_PORT": "3306",
     "DB_USER": "root",
     "DB_PASS": "",
-    "DB_NAME": "nodejs"
+    "DB_NAME": "nodejs",
+    "WEB_PORT": "3000"
 }
